# hydrogym

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  _config.yml  existing_environments.yaml  github-init.sh  github-update.sh  index.md  pydoc-markdown.yaml  pyproject.toml  reproducer_rewrite_ppo_train.py  reproducer_rewrite_ppo_tune.py  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  build.yml  codespell.yml  deploy.yml  docs.yml  isort.yml  mypy.yml  python-publish.yml  ruff-format.yml  ruff-linting.yml  ruff.yml  ruff_format.yml  ruff_lint.yml  test-deploy.yml  yapf.yml
.packaging/: Dockerfile.devpod  Dockerfile.firedrake_env  Dockerfile.hydrogym  Dockerfile.hydrogym_complex  Dockerfile.hydrogym_env  build.sh  launch.sh
.packaging/docker/: Dockerfile
_includes/: head-custom.html
_layouts/: default.html
_site/: index.html
_site/assets/css/: style.css  style.css.map
assets/css/: style.scss
cfd_gym/utils/: __init__.py  mesh.py
colabs/: Index.md  README.md  flow-configurations.ipynb  introduction.ipynb  overview.ipynb
docker/: Dockerfile  Dockerfile.complex  README.md  build.sh  launch.sh  petsc_config.sh  requirements.txt
docs/: CLAUDE.md  FlowConfigurations.md  OffineRL.md  RayClusterSetup.md  Status051822.md  TASKS.md  api.rst  basics.rst  changelog.rst  conf.py  docker_development.rst  docusaurus.config.ts  index.rst  installation.rst  package-lock.json  package.json  quickstart.rst  requirements-dev.txt  requirements.txt  rllib.rst  sidebars.ts
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/api_reference/: index.rst
docs/control_integrations/: index.rst  koopman_rl.rst
docs/dev_notes/: development_setup.rst  docker_development.rst  further_backend.rst  hf_data.rst  index.rst  testing.rst
docs/docs/: faq.md  introduction.md  quickstart.md
docs/docs/api/: __init__.md  _category_.json  core.md  data_manager.md  sidebars-api.json
docs/docs/developers/: contributing.md
docs/docs/examples/: _category_.json
docs/docs/installation/: _category_.json  firedrake.md  jax.md  jaxfluids.md  maia.md  nek5000.md
docs/examples/: index.rst  rllib_training.rst  rllib_tuning.rst
docs/html/: .buildinfo
docs/integrations/: acme.rst  cleanrl.rst  index.rst  leanrl.rst  rllib.rst  rlx.rst  stable_baselines_3.rst  torch_rl.rst
docs/parallel_setup/: index.rst  ray.rst  ray_configuration.rst  scaling.rst
docs/source/: conf.py  distributed_backend.rst  docker_development.rst  index.rst  installation.rst  parallel_scaling.rst  quickstart.rst  ray.rst  torch_rl.rst
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/user_docs/: cli.rst  colab.rst  configurability.rst  first_agent.rst  index.rst  parallel_scaling.rst  ray.rst  skypilot.rst  wandb.rst
examples/: rllib_cylinder_ppo_train.py
examples/cavity/: run-transient.py  sine-forcing.py  solve-steady.py  stability.py  unsteady.py  validation.ipynb
examples/cavity/rllib/: common.py  ppo_train.py  unsteady.py
examples/cavity/stability/: cav_base.py  cav_common.py  cav_stability.py  common.py  find-critical.py  gather.py  run-stability.sh  stability.py
examples/cylinder/: actuated.py  construct-lti.py  grad_profile.py  helmholtz-stability.py  linearize.py  lti_system.py  modified-demo.py  pd-control.py  pd-phase-sweep.py  pd.py  plot_control.py  pressure-probes.py  run-transient.py  solve-steady.py  stability.py  step_input.py  test-dP.py  unsteady.py
examples/cylinder/coarse-control/: debug.ipynb  gather.py  lqg-design.py  lqg-test.py  run-stability.sh  stability.py
examples/cylinder/control/: actuated.py  lqg-design.py  solve-steady.py  unsteady.py
examples/demo/: checkpoint-coarse.h5  run-transient.py
examples/firedrake/: README.md
examples/jax/: README.md  channel.ipynb  kolmogorov.ipynb  run_ppo.py  test_channel_env.py  test_kolmogorov_env.py
examples/jaxfluids/: environment_config.yaml  test_jaxfluids_env.py
examples/maia/: README.md
examples/nek/: .gitignore
examples/pinball/: run-symmetric.py  run-transient.py  solve-steady.py  test_dP.py  unsteady.py
examples/ppo/: cyl.py  pendulum.py  ppo.py
examples/pysindy/: run-controlled.py  run-natural.py
examples/rl/ppo/: cyl.py  (+1 more)
examples/rllib/: common.py  ppo_train.py
examples/step/: run-control.py  run-transient.py  solve-steady.py  unsteady.py
hydrogym/: __init__.py  cli.py  control.py  core.py  core_1DEnvs.py  data_manager.py  env.py  io.py  mypy.ini  pde_core.py  timestepping.py  ts.py  utils.py
hydrogym/examples/: rllib_cylinder_ppo_train.py  rllib_cylinder_ppo_tune.py
hydrogym/experimental/: __init__.py  core_1DEnvs.py
hydrogym/firedrake/: __init__.py  actuator.py  bdf_ext.py  flow.py  solver.py  solvers.py  util.py
hydrogym/flow/: __init__.py  base.py  cavity.py  cylinder.py  flows.py  pinball.py  step.py
hydrogym/flows/: __init__.py  env.py  flows.py
hydrogym/jax/: env_core.py  equation.py  flow.py
hydrogym/jaxfluids/: __init__.py  env_core.py
hydrogym/maia/: __init__.py  env_core.py  hf_data_manager.py  mpmd_interface.py  workspace.py
hydrogym/nek/: AFC.py  __init__.py  configs.py  env.py  integrate.py  parallel_env.py  pettingzoo_env.py
hydrogym/torch_env/: __init__.py  core_1DEnvs.py
hydrogym/utils/: __init__.py  io.py  linalg.py  modred_interface.py  utils.py
notebooks/: flow-config.ipynb  kolmogorov.ipynb  overview.ipynb  sindy.ipynb
packaging/: launch.sh
packaging/docker/: README.md
samples/cavity/: sine-forcing.py  solve-steady.py  unsteady.py
samples/demo/: checkpoint-coarse.h5  run-transient.py
samples/ppo/: README.md  pendulum.py
samples/rllib/: common.py  ppo_train.py
samples/step/: unsteady.py
test/: README.md  test_cavity.py  test_cavity_grad.py  test_cyl.py  test_cyl_grad.py  test_io.py  test_pinball.py  test_pinball_grad.py  test_step.py  test_step_grad.py  test_torqueCyl.py
tests/: test_cavity.py  test_cyl.py  test_pinball.py
(+456 files in other folders)
