[project]
name = "hydrogym"
version = "0.1.2.3"
authors = [
    {name="HydroGym Team"}
]
maintainers = [
    {name="Jared Callaham", email="jared.callaham@gmail.com>"},
    {name="Ludger Paehler", email="paehlerludger@gmail.com"},
    {name="Christian Lagemann", email="clage@uw.edu"},
    {name="Sam Ahnert", email="sammahnert@gmail.com"}
]
description = "A Reinforcement Learning Benchmarking Environment for Fluid Dynamics"
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10,<4.0"
keywords = [
    "Reinforcement Learning",
    "Scientific Machine Learning",
    "Benchmarking",
    "Computational Fluid Dynamics"
]
include = [
    { path = "hydrogym"}
]
dependencies = [
    "control>=0.9.2",
    "dmsuite>=0.1.1",
    "gmsh>=4.11.1",
    "torch>=2.0",
    "typed-argument-parser>=1.10.1",
    "gymnasium>=1.1.1",
    "ray>=2.44.0"
]

[project.urls]
Documentation = "https://hydrogym.readthedocs.io/"
Repository = "https://github.com/dynamicslab/hydrogym"
"Bug Tracker" = "https://github.com/dynamicslab/hydrogym/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "yapf>=0.40.2",
    "toml>=0.10.2",
    "tomli>=2.0.1",
    "codespell>=2.2.6",
    "pytest>=8.1.1"
]
interactive = [
    "jupyterlab>=3.5.2",
    "ipykernel>=6.19.4",
    "notebook>=6.5.2",
    "ipywidgets>=8.0.4",
    "mpltools>=0.2.0",
    "nbformat>=5.7.1",
    "nbconvert>=7.2.7",
    "memory-profiler>=0.61.0",
    "seaborn>=0.12.1"
]

[tool.yapf]
based_on_style = "yapf"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401", "E731"]

[tool.codespell]
skip = '*.svg,*.ipynb'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
