[tool.poetry]
name = "hydrogym"
version = "1.0.0"
authors = [
    "HydroGym Team"
]
maintainers = [
    "Christian Lagemann <clage@uw.edu>",
    "Ludger Paehler <paehlerludger@gmail.com>",
    "Jared Callaham <jared.callaham@gmail.com>",
]
description = "A Reinforcement Learning Benchmarking Environment for Fluid Dynamics (with Firedrake, JAX-Fluids, MAIA, and NEK5000 solver support)"
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
]
documentation = "https://dynamicslab.github.io/hydrogym"
repository = "https://github.com/dynamicslab/hydrogym"
keywords = [
    "Reinforcement Learning",
    "Scientific Machine Learning",
    "Benchmarking",
    "Computational Fluid Dynamics"
]
include = [
    { path = "hydrogym"}
]

[tool.poetry.urls]
issues = "https://github.com/dynamicslab/hydrogym/issues"

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
control = "^0.9.2"
dmsuite = "^0.1.1"
gymnasium = "^1.2.3"
huggingface-hub = "^0.16.0"
pandas = "^2.1.0"
scipy = "^1.7.0"

# Firedrake solver optional dependencies
# (firedrake itself must be installed via its own installer)
gmsh = { version = "^4.11.1", optional = true }
psutil = {version = "^7.2.2", optional = true }

# Maia solver optional dependencies
mpi4py = { version = "^4.0.0", optional = true }
omegaconf = { version = "^2.1.0", optional = true }
einops = { version = "^0.6.0", optional = true }
toml = { version = "^0.10.0", optional = true }

# NEK5000 solver optional dependencies
pymech = { version = "^1.4.0", optional = true }
pettingzoo = { version = "^1.24.0", optional = true }
stable-baselines3 = { version = "^2.7.1", optional = true }
supersuit = { version = "3.10.0", optional = true }
tensorboard = { version = "^2.0.0", optional = true }

# JAX solver optional dependencies
jax = { version = "*", optional = true }
jaxlib = { version = "*", optional = true }
chex = { version = "*", optional = true }
navix = { version = "*", optional = true }
gymnax = { version = "*", optional = true }
tree-math = { version = "*", optional = true }

# JAX-Fluids solver optional dependencies
flax = { version = "*", optional = true }
gitpython = { version = "*", optional = true }
h5py = { version = "*", optional = true }
optax = { version = "*", optional = true }
pyvista = { version = "*", optional = true }


[tool.poetry.extras]
firedrake = ["gmsh", "psutil"]
maia = ["mpi4py", "omegaconf", "einops", "toml"]
nek = ["mpi4py", "omegaconf", "pymech", "pettingzoo", "stable-baselines3", "supersuit", "tensorboard"]
jax = ["jax", "jaxlib", "chex", "navix", "gymnax", "tree-math", "flax", "omegaconf", "toml"]
jaxfluids = ["jax", "jaxlib", "flax", "gitpython", "h5py", "optax"]
all = [
  "gmsh", "psutil",
  "mpi4py", "omegaconf", "einops", "toml",
  "pymech", "pettingzoo", "stable-baselines3", "supersuit", "tensorboard",
  "jax", "jaxlib", "chex", "navix", "gymnax", "tree-math",
  "flax", "gitpython", "h5py", "optax"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.8"
isort = "^5.13.0"
toml = "^0.10.2"
tomli = "^2.0.1"
codespell = "^2.2.6"
pytest = "^8.1.1"
psutil = "^7.0.2"

[tool.poetry.group.interactive.dependencies]
jupyterlab = "^3.5.2"
ipykernel = "^6.19.4"
notebook = "^6.5.2"
ipywidgets = "^8.0.4"
mpltools = "^0.2.0"
nbformat = "^5.7.1"
nbconvert = "^7.2.7"
memory-profiler = "^0.61.0"
seaborn = "^0.12.1"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401", "E731"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["hydrogym"]

[tool.codespell]
skip = '*.svg,*.ipynb,./docs/package-lock.json'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
